--- a/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/scream/tests/coupled/dynamics_physics/homme_shoc_cld_p3_rrtmgp/input.yaml
@@ -37,6 +37,11 @@ atmosphere_processes:
       number_of_subcycles: ${MAC_MIC_SUBCYCLES}
       p3:
         do_prescribed_ccn: false
+        enable_column_conservation_checks: true
+        column_conservation_check_tolerance: 1e-4
+      shoc:
+        enable_column_conservation_checks: true
+        column_conservation_check_tolerance: 1e-3
     rrtmgp:
       column_chunk_size: 123
       active_gases: ["h2o", "co2", "o3", "n2o", "co" , "ch4", "o2", "n2"]
@@ -45,6 +50,8 @@ atmosphere_processes:
       rrtmgp_coefficients_file_lw: ${SCREAM_DATA_DIR}/init/rrtmgp-data-lw-g128-210809.nc
       rrtmgp_cloud_optics_file_sw: ${SCREAM_DATA_DIR}/init/rrtmgp-cloud-optics-coeffs-sw.nc
       rrtmgp_cloud_optics_file_lw: ${SCREAM_DATA_DIR}/init/rrtmgp-cloud-optics-coeffs-lw.nc
+      enable_column_conservation_checks: true
+      column_conservation_check_tolerance: 1e-14
 
 grids_manager:
   Type: Homme
