--- a/components/scream/src/physics/p3/CMakeLists.txt
+++ b/components/scream/src/physics/p3/CMakeLists.txt
@@ -9,7 +9,7 @@ set(P3_SRCS
 )
 
 # Add ETI source files if not on CUDA/HIP
-if (NOT EAMXX_ENABLE_GPU)
+if (NOT EAMXX_ENABLE_GPU OR Kokkos_ENABLE_CUDA_RELOCATABLE_DEVICE_CODE OR Kokkos_ENABLE_HIP_RELOCATABLE_DEVICE_CODE)
   list(APPEND P3_SRCS
     p3_upwind.cpp
     p3_cloud_sed.cpp
@@ -90,7 +90,9 @@ add_executable(p3_tables_setup EXCLUDE_FROM_ALL p3_tables_setup.cpp)
 target_link_libraries(p3_tables_setup p3)
 
 #crusher change
+if (Kokkos_ENABLE_HIP)
 set_source_files_properties(p3_functions_f90.cpp  PROPERTIES COMPILE_FLAGS -O0)
+endif()
 
 if (NOT SCREAM_LIB_ONLY)
   add_subdirectory(tests)
