--- a/components/CMakeLists.txt
+++ b/components/CMakeLists.txt
@@ -94,7 +94,7 @@ project(E3SM C CXX Fortran)
 # Include function definitions
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_util.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/build_mpas_model.cmake)
-include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/build_scream.cmake)
+include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/build_eamxx.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/build_model.cmake)
 
 set(CMAKE_VERBOSE_MAKEFILE TRUE)
@@ -104,7 +104,7 @@ if(USE_CUDA)
 endif()
 
 # Scream manages its own flags
-build_scream()
+build_eamxx()
 
 # We do want CMAKE_BUILD_TYPE to be set, but we do NOT want CMake to
 # decide what optimization flags to append, based on build type,
