--- a/components/eamxx/src/physics/nudging/tests/CMakeLists.txt
+++ b/components/eamxx/src/physics/nudging/tests/CMakeLists.txt
@@ -1,6 +1,8 @@
 if (NOT SCREAM_BASELINES_ONLY)
   include(ScreamUtils)
 
-  CreateUnitTest(nudging "nudging_tests.cpp" "${NEED_LIBS}" LABELS "physics_nudging" )
+  set( NEED_LIBS scream_share nudging physics_share)
+
+  CreateUnitTest(nudging_tests "nudging_tests.cpp" "${NEED_LIBS}" LABELS "physics_nudging" )
 
 endif()
